--- a/index.html
+++ b/index.html
@@ -1,18 +1,25 @@
-<!DOCTYPE html>
-<html lang="zh" class="[--scroll-mt:9.875rem] lg:[--scroll-mt:6.3125rem] js-focus-visible dark" data-js-focus-visible>
-
+DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <link rel="icon" href="/LunarCoreTools/favicon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>LunarcoreTools</title>
-  <script type="module" crossorigin src="/LunarCoreTools/assets/index.bd6e3807.js"></script>
-  <link rel="stylesheet" href="/LunarCoreTools/assets/index.f4bf9d6d.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>404 Not Found</title>
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: #f4f4f4;
+            color: #333;
+            text-align: center;
+            padding: 50px;
+        }
+
+        h1 {
+            color: #d9534f;
+        }
+    </style>
 </head>
-
-<body class="antialiased text-slate-500 dark:text-slate-400 bg-white">
-  <div id="app"></div>
-  
+<body>
+    <h1>404 - Not Found</h1>
+    <p>Sorry, the page you are looking for might be in another castle.</p>
 </body>
-
 </html>
